# cg-prompt-info

./: README.md  __init__.py  prompt_info.py  pyproject.toml
js/: prompt_info.js
